--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -191,7 +191,7 @@ footer {
 }
 
 .top_header {
-    width: 860px; margin: 0 auto;    
+    width: 860px; margin: 0 auto;
 }
 
 .top_header_outer {
@@ -265,9 +265,9 @@ footer {
   pre, code {
     word-wrap:normal;
   }
-  
+
   .top_header {
-      width: 720px; margin: 0 auto;    
+      width: 720px; margin: 0 auto;
   }
 
 }
@@ -278,7 +278,7 @@ footer {
   }
 
   .top_header {
-      width: 100%; margin: 0 auto;    
+      width: 100%; margin: 0 auto;
   }
 
   .top_header_outer {
@@ -293,4 +293,55 @@ footer {
     font-size:12pt;
     color:#444;
   }
+}
+
+
+
+
+
+ul.libutton {
+  list-style:none;
+  height:50px;
+
+  padding:0;
+
+  background: #eee;
+  background: -moz-linear-gradient(top, #f8f8f8 0%, #dddddd 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
+  background: -webkit-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
+  background: -o-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
+  background: -ms-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
+  background: linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
+
+  border-radius:5px;
+  border:1px solid #d2d2d2;
+  box-shadow:inset #fff 0 1px 0, inset rgba(0,0,0,0.03) 0 -1px 0;
+  width:270px;
+}
+
+li.libutton {
+  /* When 3: width:89px; */
+  /* When 2: width:134px; */
+  width:89px;
+  float:left;
+  border-right:1px solid #d2d2d2;
+  height:50px;
+  width:270px;
+}
+
+a.libutton {
+  line-height:1;
+  font-size:13px;
+  color:#999;
+  display:block;
+  text-align:center;
+  padding-top:8px;
+  height:50px;
+}
+
+strong.libutton {
+  font-size:18px;
+  padding-top:4px;
+  display:block;
+  color:#222;
 }
